--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "@nedgrady/wordsapi",
   "version": "1.0.8",
   "description": "",
-  "main": "lib/index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "private": false,
   "scripts": {
     "test": "npx jest",
     "build": "tsc",
-    "deploy" : "npm publish --access public"
+    "deploy": "npm publish --access public"
   },
   "keywords": [],
   "author": "",
@@ -17,8 +18,12 @@
   ],
   "devDependencies": {
     "@types/jest": "^26.0.14",
+    "axios-mock-adapter": "^1.18.2",
     "jest": "^26.6.0",
     "ts-jest": "^26.4.1",
     "typescript": "^4.0.3"
+  },
+  "dependencies": {
+    "axios": "^0.20.0"
   }
 }
