--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "@nedgrady/wordsapi",
   "version": "1.1.1",
   "description": "",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "dist/WordsApiClient",
+  "types": "dist/WordsApiClient.d.ts",
+  "typings": "dist/WordsApiClient",
   "private": false,
   "scripts": {
     "test": "npx jest",
     "build": "tsc",
-    "deploy": "npm publish --access public"
+    "deploy": "npm run build && npm publish --access public"
   },
   "keywords": [],
   "author": "",
